# JobFinder-FastApi

./: README.md  docker-compose.yml  dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: 21810134bcfd_create_tables.py  2c0cc6d8c636_update_tables.py  3b4e21d7c6c1_rebild_db.py
src/: main.py
src/api/v1/: admin_router.py  auth_router.py  public_router.py  router.py
src/api/v1/applicant_routers/: applicant_router.py
src/core/: config.py  constants.py  exceptions.py  hash.py
src/cruds/: application_crud.py  auth_crud.py  base_crud.py
src/cruds/applicant_cruds/: education_crud.py  resume_crud.py
src/cruds/company_cruds/: vacancy_crud.py
src/cruds/user_cruds/: role_crud.py  user_crud.py
src/db/: database.py
src/models/: model.py  seed.py
src/redis/: auth.py  cache.py  cache_service.py  client.py  lock_service.py  rate_limit.py  redis_client.py
src/schemas/: admin_schema.py  application_schema.py  auth_schema.py  city_schema.py  profession_schema.py  skill_schema.py
src/schemas/applicant_schemas/: applicant_schema.py  education_schema.py  resume_schema.py  work_experience_schema.py
src/schemas/company_schemas/: vacancy_schema.py
src/services/: admin_service.py  application_service.py  auth_service.py  public_service.py  user_service.py  vacancy_public_service.py
src/services/ApplicantServices/: applicant_service.py
src/services/CompanyService/: company_service.py
src/utils/: auth_utils.py  logger.py
